143370 api spec and swagger update AB#143373  AB#143370
