# UKHO.ExchangeSetService.API/UKHO.ExchangeSetService.API/Controllers/ProductDataController.cs
@@ -55,7 +55,7 @@ namespace UKHO.ExchangeSetService.API.Controllers
         /// </remarks>
         /// <param name="productIdentifiers">The JSON body containing product identifiers.</param>
         /// <param name="callbackUri">An optional callback URI that will be used to notify the requestor once the requested Exchange Set is ready to download from the File Share Service. The data for the notification will follow the CloudEvents 1.0 standard, with the data portion containing the same Exchange Set data as the response to the original API request. If not specified, then no call back notification will be sent.</param>
-        /// <param name="exchangeSetStandard" example="s63">An optional exchangeSetStandard parameter determines whether the Exchange Set is encrypted or not. If the value is s63, the Exchange Set will be encrypted. If the value is s57, the Exchange Set will be unencrypted. The default value of exchangeSetStandard is s63, which means the Exchange Set is encrypted by default.</param>
+        /// <param name="exchangeSetStandard" example="s63, s57">An optional exchangeSetStandard parameter determines <b><i>the standard of the Exchange Set.</i></b> If the value is s63, the Exchange Set will be encrypted. If the value is s57, the Exchange Set will be unencrypted.The default value of exchangeSetStandard is s63, which means the Exchange Set is encrypted by default</param>
         /// <response code="200">A JSON body that indicates the URL that the Exchange Set will be available on as well as the number of cells in that Exchange Set.</response>
         /// <response code="400">Bad Request.</response>
         /// <response code="401">Unauthorised - either you have not provided any credentials, or your credentials are not recognised.</response>
@@ -142,7 +142,7 @@ namespace UKHO.ExchangeSetService.API.Controllers
         /// </remarks>
         /// <param name="productVersionsRequest">The JSON body containing product versions.</param>
         /// <param name="callbackUri">An optional callback URI that will be used to notify the requestor once the requested Exchange Set is ready to download from the File Share Service. The data for the notification will follow the CloudEvents 1.0 standard, with the data portion containing the same Exchange Set data as the response to the original API request. If not specified, then no call back notification will be sent.</param>
-        /// <param name="exchangeSetStandard" example="s63">An optional exchangeSetStandard parameter determines whether the Exchange Set is encrypted or not. If the value is s63, the Exchange Set will be encrypted. If the value is s57, the Exchange Set will be unencrypted. The default value of exchangeSetStandard is s63, which means the Exchange Set is encrypted by default.</param>
+        /// <param name="exchangeSetStandard" example="s63, s57">An optional exchangeSetStandard parameter determines <b><i>the standard of the Exchange Set.</i></b> If the value is s63, the Exchange Set will be encrypted. If the value is s57, the Exchange Set will be unencrypted.The default value of exchangeSetStandard is s63, which means the Exchange Set is encrypted by default.</param>
         /// <response code="200">A JSON body that indicates the URL that the Exchange Set will be available on as well as the number of cells in that Exchange Set. If there are no updates for any of the productVersions, then status code 200 ('OK') will be returned with an empty Exchange Set (containing just the latest PRODUCTS.TXT) and the exchangeSetCellCount will be 0.</response>
         /// <response code="400">Bad Request.</response>
         /// <response code="401">Unauthorised - either you have not provided any credentials, or your credentials are not recognised.</response>
@@ -219,7 +219,7 @@ namespace UKHO.ExchangeSetService.API.Controllers
         /// <br/><para><i>Example</i> : Wed, 21 Oct 2015 07:28:00 GMT</para>
         /// </param>
         /// <param name="callbackUri">An optional callback URI that will be used to notify the requestor once the requested Exchange Set is ready to download from the File Share Service. The data for the notification will follow the CloudEvents 1.0 standard, with the data portion containing the same Exchange Set data as the response to the original API request. If not specified, then no call back notification will be sent.</param>
-        /// <param name="exchangeSetStandard" example="s63">An optional exchangeSetStandard parameter determines whether the Exchange Set is encrypted or not. If the value is s63, the Exchange Set will be encrypted. If the value is s57, the Exchange Set will be unencrypted. The default value of exchangeSetStandard is s63, which means the Exchange Set is encrypted by default.</param>
+        /// <param name="exchangeSetStandard" example="s63, s57">An optional exchangeSetStandard parameter determines <b><i>the standard of the Exchange Set.</i></b> If the value is s63, the Exchange Set will be encrypted. If the value is s57, the Exchange Set will be unencrypted.The default value of exchangeSetStandard is s63, which means the Exchange Set is encrypted by default.</param>
         /// <response code="200">A JSON body that indicates the URL that the Exchange Set will be available on as well as the number of cells in that Exchange Set. If there are no updates since the sinceDateTime parameter, then a 'Not modified' response will be returned.</response>
         /// <response code="304">Not modified.</response>
         /// <response code="400">Bad Request.</response>
